# rust-oci-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: send_html_email.rs  send_test_email.rs
src/: lib.rs
src/auth/: config.rs  config_loader.rs  key_loader.rs  mod.rs
src/client/: http.rs  mod.rs  signer.rs
src/error/: mod.rs
src/services/: mod.rs
src/services/email/: api.rs  client.rs  mod.rs  models.rs
src/utils/: mod.rs
tests/: auth_integration_test.rs  real_oci_integration_test.rs  tempfile_cleanup_simple_test.rs
